--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
 
 button {
     margin-top: 20px;
-    margin-right: auto; /* Ajusta automaticamente para manter o botão centralizado */
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     transition: margin 0.5s ease;
 }
