--- a/style.css
+++ b/style.css
@@ -12,5 +12,8 @@ body {
 
 button {
     margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
     transition: margin 0.5s ease;
 }
