--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background: url('../imagens/4155443-natal-feriado-fundo-gratis-foto.jpg') center/cover no-repeat;
+    background: url('https://drive.google.com/uc?id=17EnuEzhXKgLBhdpAVspFzViDUi3uqLXi') center/cover no-repeat;
 }
 
 .container {
