--- a/style.css
+++ b/style.css
@@ -27,23 +27,23 @@ button {
   left: 0;
   pointer-events: none;
 }
-
 .fogo {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  background-color: #ffcc00;
-  animation: fogoAnimation 3s linear infinite;
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #ffcc00;
+    animation: fogoAnimation 0.5s linear infinite;
 }
 
 @keyframes fogoAnimation {
-  0% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(0);
-    opacity: 0;
-  }
+    0%, 100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(0.5);
+        opacity: 0.5;
+    }
 }
+
