--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background: url('https://drive.google.com/file/d/1MHtRs8DxgPzvNCj60hq_jnzMA_HoOyms/view?usp=drive_link') center/cover no-repeat;
+    background: url('https://drive.google.com/file/d/1Usfi0uI3PABS7PNzxAmQCnC4yePsPGe8/view?usp=sharing') center/cover no-repeat;
 }
 
 .container {
