--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background: url('https://www.canva.com/design/DAF2cY-pIm8/g5UGwxCyZl4_4-zhRjGzEQ/edit?utm_content=DAF2cY-pIm8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton') center/cover no-repeat;
+    background: url('https://drive.google.com/file/d/16TtumYqqaiemHKLuszhn8I7EhmIyon-z/view?usp=sharing') center/cover no-repeat;
 }
 
 .container {
