--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background: url('https://drive.google.com/uc?id=17EnuEzhXKgLBhdpAVspFzViDUi3uqLXi') center/cover no-repeat;
+    background: url('https://drive.google.com/file/d/1pH-ex6LfJIezLy2pbAMFV7Vgc4LcUvEO/view?usp=sharing') center/cover no-repeat;
 }
 
 .container {
