--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
   background-size: 100% 100%;
 }
 
+h1 {
+  font-size: 24px; /* Tamanho de fonte para h1 */
+}
+
 .container {
     text-align: center;
 }
