--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
   background-size: 100% 100%;
 }
 
+#fraseGerada {
+    font-size: 2rem; /* Ajuste o tamanho da fonte conforme necessário */
+    font-weight: bold; /* Adicione essa linha se quiser que o texto seja em negrito */
+    color: #ffffff; /* Adicione essa linha para definir a cor do texto */
+}
+
 h1 {
   font-size: 24px; /* Tamanho de fonte para h1 */
 }
